--- a/Test/VulkanWrapperSandbox/VulkanWrapperSandbox.vcxproj
+++ b/Test/VulkanWrapperSandbox/VulkanWrapperSandbox.vcxproj
@@ -130,12 +130,16 @@
     <ClCompile Include="DynamicLibrary.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
+    <ClCompile Include="VulkanPhysicalDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DynamicLibrary.h" />
     <ClInclude Include="StdFilesystem.h" />
     <ClInclude Include="VulkanApplicationInfo.h" />
+    <ClInclude Include="VulkanFunctions.h" />
     <ClInclude Include="VulkanInstance.h" />
+    <ClInclude Include="VulkanPhysicalDevice.h" />
+    <ClInclude Include="VulkanQueueFamilyProperties.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
